fix(payment): align total to bottom of left panel with minimum margin

--- a/src/app/pages/payment/payment-layout.component.css
+++ b/src/app/pages/payment/payment-layout.component.css
@@ -9,7 +9,7 @@
 
 /* Gradient fade above pay CTA */
 .pay-cta::before {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   right: 0;
@@ -98,7 +98,7 @@
   }
 
   .total {
-    margin-top: auto;
+    /*margin-top: auto;*/
     position: static;
     padding-top: 0;
   }
